apps/mosquitto/mosquitto.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  ports:
    - port: 1883
      name: mqtt
  selector:
    app: mosquitto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  selector:
    matchLabels:
      app: mosquitto
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mosquitto
        tier: frontend
    spec:
      containers:
        - image: eclipse-mosquitto:latest
          name: mosquitto
          ports:
            - containerPort: 1883
          volumeMounts:
            - name: mosquitto-persistent-storage
              mountPath: /mosquitto/data
            - name: mosquitto-config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: mosquitto-password
              mountPath: /mosquitto/config/password.txt
              subPath: password.txt
      volumes:
        - name: mosquitto-persistent-storage
          persistentVolumeClaim:
            claimName: mosquitto-claim
        - configMap:
            name: mosquitto-password
          name: mosquitto-password
        - configMap:
            name: mosquitto-config
          name: mosquitto-config
