apps/mosquitto/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mqtt-external-ingress
  namespace: default
spec:
  entryPoints:
    - mqtt
  routes:
    - match: HostSNI(`*`)
      priority: 10
      services:
        - name: mosquitto
          port: 1883
